...
    <string name="app_description">Restaurant POS Application.</string>
    <string name="logo_description">Popos Highlight</string>
    <string name="password_visible_content_description">Password Visible</string>
    <string name="password_hidden_content_description">Password Hidden</string>
    <string name="create_order">Create Order</string>
    <string name="back">Navigate Back</string>
    <string name="search_icon">Search Icon</string>
    <string name="popos_highlight">Popos Highlight</string>
    <string name="increaseQuantity">Increase Quantity</string>
    <string name="decreaseQuantity">Decrease Quantity</string>
    <string name="add_items_to_cart_button">Add Items to cart</string>
    <string name="add_icon">Add Icon</string>
    <string name="cart_screen">Cart Screen</string>
    <string name="edit_cart_order">Update Order Details</string>
    <string name="edit_category">Edit Category</string>
    <string name="create_category">Create New Category</string>
    <string name="no_items_in_category">Categories Not Available</string>
    <string name="no_items_in_product">Products Not Available</string>
    <string name="create_product">Add New Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="filter_product">Filter Product</string>
    <string name="edit_address">Update Address</string>
    <string name="create_address">Add New Address</string>
    <string name="create_customer">Add New Customer</string>
    <string name="no_items_in_customers">Customers Not Found</string>
    <string name="no_items_in_address">Address Not Found</string>
    <string name="edit_customer">Update Customer Details</string>
    <string name="create_new_order">Create New Order</string>
    <string name="close_icon">Close Icon</string>
    <string name="no_items_in_order">You have not placed any order today.</string>
    <string name="filter_order">Filter Orders</string>
    <string name="search_item_not_found">Searched Item Not Found</string>
    <string name="print_order">Print Order</string>
    <string name="filter_address">Filter Address</string>
    <string name="create_new_add_on">Create New AddOn</string>
    <string name="filter_add_on_item">Filter AddOn Item</string>
    <string name="edit_add_on_item">Update AddOn Item</string>
    <string name="no_items_in_addon">AddOn Items Not Found</string>
...
    <string name="customer_settings">Customer Setting Screen</string>
    <string name="delete_all_customers">Are you sure to delete all customer including of his all orders?</string>
    <string name="no_bluetooth_devices_available">Bluetooth printers is not available in this device.</string>
    <string name="addon_name_field">AddOn Name</string>
    <string name="addon_price_field">AddOn Price</string>
    <string name="addon_add_edit_button">AddEdit AddOn Item Button</string>
    <string name="filter_category">Filter Category</string>
    <string name="filter_customer">Filter Customer</string>
    <string name="employee_details">View Employee Details</string>
    <string name="mail_subject">Popos Crash Report</string>
    <string name="mail_body">Check out why your application has been crashes.</string>
    <string name="toast_text">Popos Application Has Been Crashed.</string>
    <string name="notification_title">Application Crashed..</string>
...
