package com.niyaj.popos.features.category.domain.util

object CategoryTestTags {

    const val CATEGORY_NAME_FIELD = "Category Name"
    const val CATEGORY_NAME_ERROR = "Category Name Error"

    const val ADD_EDIT_CATEGORY_BTN = "AddEdit Category Button"

}