...
                }else{
                    navController.navigateUp()
                }
            },
            title = {
                if(selectedCategories.isEmpty()){
                    Text(text = "Categories")
                }else if(selectedCategories.size > 1){
                    Text(text = "${selectedCategories.size} Selected")
                }
            },
            isFloatingActionButtonDocked = categories.isNotEmpty(),
            floatingActionButton = {
...
